# kerang

./: .clang-format  .gitignore  CMakeLists.txt  flake.nix
src/: CMakeLists.txt  builtins.cpp  builtins.hpp  main.c  main.cpp  main.hpp
src/commands/: CMakeLists.txt  builtins.cpp  builtins.hpp  lib.cpp  lib.hpp
src/parser/: CMakeLists.txt  lib.cpp  lib.hpp  parser.c  parser.cpp  parser.h  parser.hpp  tokenizer.c  tokenizer.cpp  tokenizer.h  tokenizer.hpp
tests/: CMakeLists.txt  test_parser.c  test_parser.cpp  test_tokenizer.c  test_tokenizer.cpp
